--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,18 +65,21 @@ nav ul li:hover a {
   column-gap: 20px;
   margin: auto;
   width: 80%;
-  height: 100dvh;
+  min-height: 100dvh;
   border-bottom: 1px solid rgb(0, 255, 255, 0.5);
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
+  overflow: auto;
 }
 
 /* set the right div column */
 .right-div {
   flex: 1;
-  display: flex;
-  flex-direction: column;
+  max-height: 100%;
+  overflow: auto;
+  /* display: flex;
+  flex-direction: column; */
   /* justify-content: center; */
-  align-items: normal;
+  /* align-items: normal; */
 }
 
 /* set the profilecontainer */
