--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,6 +70,20 @@ nav ul li:hover a {
   /* margin-bottom: 10px; */
   overflow: auto;
 }
+@media (max-width: 768px){
+  #mainsection {
+    display: flex;
+    /* grid-template-columns: 1fr 2fr; */
+    /* column-gap: 20px; */
+    margin: auto;
+    width: 80%;
+    min-height: 100dvh;
+    border-bottom: 1px solid rgb(0, 255, 255, 0.5);
+    /* margin-bottom: 10px; */
+    overflow: auto;
+  }
+}
+
 
 /* set the right div column */
 .right-div {
