--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,7 +67,7 @@ nav ul li:hover a {
   width: 80%;
   min-height: 100dvh;
   border-bottom: 1px solid rgb(0, 255, 255, 0.5);
-  /* margin-bottom: 10px; */
+  margin-bottom: 10px;
   overflow: auto;
 }
 @media (max-width: 768px){
@@ -77,6 +77,7 @@ nav ul li:hover a {
     margin: auto;
     width: 80%;
     border-bottom: 1px solid rgb(0, 255, 255, 0.5);
+    padding-bottom: 10px;
     overflow: auto;
   }
 }
